<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/train_buttons"
        android:id="@+id/control_buttons">
    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/send_button"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/load_button"
        android:text="@string/load"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textStyle="bold"
        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/train_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/take_pic_button">

        <Button
            android:id="@+id/train_gal_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/train"
            android:textAllCaps="false"
            android:textSize="21sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/take_pic_button"
        android:text="@string/take_picture"
        android:textAllCaps="false"
        android:layout_above="@id/lauch_gal_button"
        android:textSize="21sp"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/lauch_gal_button"
        android:text="@string/launch_gallery"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        />
    <ImageView
        android:layout_width="380sp"
        android:layout_height="350sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView"
        android:layout_marginTop="10sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/classify"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/classified"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="10sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="#C30000"
        android:textStyle="bold"
        android:textSize="27sp"
        android:id="@+id/result"
        android:layout_below="@+id/classified"
        />
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:textColor="#000000"-->
<!--        android:textStyle="normal"-->
<!--        android:textSize="18sp"-->
<!--        android:id="@+id/probabilities"-->
<!--        android:layout_below="@id/result"-->
<!--        android:layout_marginTop="10sp"-->
<!--        />-->
</RelativeLayout>