<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/training_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/learning_process_ongoing"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <ProgressBar
        android:id="@+id/training_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/training_status_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:indeterminate="true" />

    <TextView
        android:id="@+id/progressText"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/training_progress_bar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:padding="16dp"
        android:text="@string/training_progress"
        android:textSize="18sp" />

    <Button
        android:id="@+id/cancel_training_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/cancel_training" />

</RelativeLayout>
